# llmXive

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  migration-report-phase2.json  migration-report.md  mypy.ini  naming-standardization-report.json  netlify.toml  package-lock.json  package.json  pipeline_config.yaml  pipeline_log.txt  pipeline_schema.json  pyproject.toml  ruff.toml  test-project-board.js
.claude/: settings.json
.omc/: project-memory.json
.playwright-mcp/: page-2026-04-29T13-06-51-439Z.yml  page-2026-04-29T13-07-15-594Z.yml  page-2026-04-29T13-08-54-952Z.yml  page-2026-04-29T13-09-02-812Z.yml  page-2026-04-29T23-49-52-157Z.yml  page-2026-04-29T23-50-57-419Z.yml
.specify/: feature.json
agents/: registry.yaml
code/: README.md
data/: README.md
docs/: DEPLOY_NETLIFY.md  DEPLOY_SIMPLE.md  GITHUB_OAUTH_SETUP.md  OAUTH_SETUP_GUIDE.md  README.md  SETUP.md  _config.yml  index-new.html  index.html
implementation_plans/: README.md
notes/: CONTEXT_COMPRESSION_REMINDER.md  CRITICAL_FIXES_PLAN_2025-07-09.md  CRITICAL_REQUIREMENT_FULL_E2E_TEST.md  FINAL_COMPLETION_SUMMARY_2025-07-09.md  MIGRATION_COMPLETION_SUMMARY_2025-07-09.md  PROJ-024-pipeline-verification-2026-04-30.md  comprehensive_implementation_review_2025-07-08.md  llmxive_v2_final_review_2025-07-07.md  repository_organization_design_2025-07-08.md  repository_reorganization_completion_2025-07-08.md  (+1 more)
papers/: README.md
projects/PROJ-024-bayesian-nonparametrics-for-anomaly-dete/code/: .flake8  .gitignore  .isort.cfg  .ruff.toml  __init__.py  config.yaml  download_datasets.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  tests_requirements.txt
projects/PROJ-024-bayesian-nonparametrics-for-anomaly-dete/code/.tasks/: T057_T065_validation_report.json  T076_verification_report.json  T077_contract_tests_report.md
projects/PROJ-024-bayesian-nonparametrics-for-anomaly-dete/code/baselines/: arima.py  moving_average.py
projects/PROJ-024-bayesian-nonparametrics-for-anomaly-dete/code/data/: .download_config.yaml  README.md  __init__.py  download_datasets.py  synthetic_anomaly_generator.py  synthetic_generator.py
projects/PROJ-024-bayesian-nonparametrics-for-anomaly-dete/code/data/results/: moving_average_predictions.json  moving_average_summary.json
projects/PROJ-024-bayesian-nonparametrics-for-anomaly-dete/code/evaluation/: __init__.py  metrics.py  plots.py  statistical_tests.py
projects/PROJ-024-bayesian-nonparametrics-for-anomaly-dete/code/models/: anomaly_score.py  baselines.py  dp_gmm.py  dpgmm.py  time_series.py  timeseries.py
projects/PROJ-024-bayesian-nonparametrics-for-anomaly-dete/code/results/: hyperparameter_comparison.json  hyperparameter_comparison.txt
projects/PROJ-024-bayesian-nonparametrics-for-anomaly-dete/code/scripts/: compute_anomaly_uncertainty.py  create_data_structure.py  create_project_structure.py  download_synthetic_control.py  download_uci_datasets.py  fix_task_paths.py  generate_checksums.py  generate_data_checksums.py  generate_experiment_metadata.py  profile_memory_1000_obs.py  reduce_config.py  restructure_code.py  run_all_contract_tests.py  run_contract_tests.py  run_full_pipeline_integration_test.py  setup_data_dirs.py  test_advi_inference.py  test_concentration_tuning.py  test_missing_value_handling.py  test_verification_report.json  update_state_checksums.py  validate_checkpoint_1.py  validate_checkpoint_2.py  validate_final.py  validate_integration_test_results.py  validate_quickstart_artifacts.py  verify_confusion_matrix.py  verify_constitution_principles.py  verify_fr001_stick_breaking.py  verify_fr002_incremental_update.py  verify_fr003_anomaly_scores.py  verify_fr004_threshold_flagging.py  verify_fr006_evaluation_plots.py  verify_memory_usage.py  verify_metrics_functions.py  verify_project_structure.py  verify_runtime_performance.py  verify_sample_sizes.py  verify_sc003_runtime.py  verify_sc004_hyperparameter_reduction.py  (+9 more)
projects/PROJ-024-bayesian-nonparametrics-for-anomaly-dete/code/services/: anomaly_detector.py  state_tracker.py  threshold_calibrator.py
projects/PROJ-024-bayesian-nonparametrics-for-anomaly-dete/code/src/: __init__.py
projects/PROJ-024-bayesian-nonparametrics-for-anomaly-dete/code/src/baselines/: __init__.py  arima.py  moving_average.py
projects/PROJ-024-bayesian-nonparametrics-for-anomaly-dete/code/src/data/: __init__.py  download_datasets.py  synthetic_generator.py
projects/PROJ-024-bayesian-nonparametrics-for-anomaly-dete/code/src/evaluation/: __init__.py  metrics.py  plots.py  statistical_tests.py
projects/PROJ-024-bayesian-nonparametrics-for-anomaly-dete/code/src/models/: __init__.py  anomaly_score.py  dp_gmm.py  time_series.py
projects/PROJ-024-bayesian-nonparametrics-for-anomaly-dete/code/src/services/: __init__.py  anomaly_detector.py
projects/PROJ-024-bayesian-nonparametrics-for-anomaly-dete/code/src/utils/: __init__.py  hyperparameter_counter.py  runtime_monitor.py  streaming.py  threshold.py  time_split.py
projects/PROJ-024-bayesian-nonparametrics-for-anomaly-dete/code/tests/: README.md  __init__.py  conftest.py  pytest.ini  requirements.txt
projects/PROJ-024-bayesian-nonparametrics-for-anomaly-dete/code/tests/contract/: __init__.py  test_anomaly_score.py  test_config.py  test_evaluation_metrics.py  test_state_contract.yaml
projects/PROJ-024-bayesian-nonparametrics-for-anomaly-dete/code/tests/integration/: test_baseline_comparison.py  test_download_datasets.py  test_memory_profile.py  test_state_tracking.py  test_threshold_calibration.py
projects/PROJ-024-bayesian-nonparametrics-for-anomaly-dete/code/tests/unit/: test_advi_convergence.py  test_anomaly_cluster_edge_case.py  test_concentration_parameter_edge_case.py  test_low_variance_edge_case.py  test_metrics.py  test_state_tracker.py  test_stick_breaking.py  test_threshold.py
projects/PROJ-024-bayesian-nonparametrics-for-anomaly-dete/code/utils/: __init__.py  checksum_manager.py  hyperparameter_counter.py  logger.py  memory_profiler.py  runtime_monitor.py  runtime_profiler.py  streaming.py  temporal_split.py  threshold.py
(+2013 files in other folders)
