[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bayesian-nonparametrics-anomaly-detection"
version = "0.1.0"
description = "Bayesian Nonparametrics for Anomaly Detection in Time Series"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.10.0,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    "seaborn>=0.12.0,<1.0.0",
    "pyyaml>=6.0,<7.0",
    "scikit-learn>=1.2.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0,<1.0.0",
    "black>=23.0.0,<24.0.0",
    "pre-commit>=3.0.0,<4.0.0",
    "pytest>=7.0.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "mypy>=1.0.0,<2.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line-too-long (black handles this)
    "B008",  # do-not-perform-function-call-in-argument-defaults
    "ARG001", # unused-arguments (common in abstract methods)
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["ARG001", "SIM117"]
"code/scripts/**/*.py" = ["ARG001"]

[tool.ruff.isort]
known-first-party = ["models", "baselines", "evaluation", "utils", "data", "scripts", "services"]
force-sort-within-sections = true

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
    /(
        \.git
        | \.hg
        | \.mypy_cache
        | \.tox
        | \.venv
        | _build
        | buck-out
        | build
        | dist
        | __pycache__
    )/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*", "code/scripts.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.pytest.cov]
source = ["code/src"]
branch = true
omit = [
    "tests/*",
    "code/scripts/*",
]
